# GameEngine

./: CMakeLists.txt  README.md
SDL2/lib/cmake/SDL2/: sdl2-config.cmake
src/core/: application.cpp  application.h  main.cpp  structs.h
src/engine/: engine.cpp  engine.h
src/math/: math.h
src/objLoader/: objLoader.cpp  objLoader.h
src/window/: window.cpp  window.h
